--- a/nginx/site/welcome.html
+++ b/nginx/site/welcome.html
@@ -6,7 +6,7 @@
 		<title>Glowberry</title>
 		
 		<!-- Sets the favicon from glowberry's assets -->
-		<link rel="icon" type="image/x-icon" href="./favicon.ico">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		
 		<!-- Imports the dynamic libraries needed for the project -->
 		<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
