Finished the reception part of the program. There is now a session system in place handling cookies so the user doesn't need to log in every time.

--- a/nginx/site/reception/welcome.html
+++ b/nginx/site/reception/welcome.html
@@ -30,7 +30,7 @@
 				</div>
 				
 				<div class="extras">
-					<label><input type="checkbox">Remember me</label>
+					<label><input id="remember-me" type="checkbox">Remember me</label>
 					<a href="/reception/forgot-password.html">I can't remember my password</a>
 				</div>
 				
