--- a/nginx/site/reception/forgot-password.html
+++ b/nginx/site/reception/forgot-password.html
@@ -8,13 +8,13 @@
 
     <link rel="stylesheet" type="text/css" href="css/login_style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script src="js/userops.js"></script>
+    <script src="js/userops.js" type="module"></script>
 </head>
 
 <body>
 
-    <div style="width: 450px" class="wrapper" id="recovery-form">
-        <form onsubmit="return handleRecoveryFormSubmission()">
+    <div style="width: 450px" class="wrapper">
+        <form id="recovery-form">
             <h1>Password Recovery</h1>
 
             <div class="input-box">
