Finished the design of the profiles, finished the prototype of the permissions menu too. Did a bunch of php and js work

--- a/nginx/site/reception/forgot-password.html
+++ b/nginx/site/reception/forgot-password.html
@@ -14,6 +14,7 @@
 <body>
 
     <div style="width: 450px" class="wrapper">
+
         <form id="recovery-form">
             <h1>Password Recovery</h1>
 
@@ -31,6 +32,8 @@
 
             <button type="submit" class="login_btn">Reset my password</button>
         </form>
+
+        <a style="color: whitesmoke; text-align: center;" href="/reception/welcome.html"><p><br>Back to login</p></a>
     </div>
 
 </body>
