--- a/nginx/site/reception/welcome.html
+++ b/nginx/site/reception/welcome.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Glowberry</title>
+    <title>Glowberry - Welcome</title>
 
     <!-- Sets the favicon from glowberry's assets -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
